--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,10 +1,46 @@
-.index {
-  .post-content {
-    background-color: #f5f5f5;
-    padding 20px;
+.index
+  .post-content
+    background-color #f5f5f5
+    paddin: 20px
     border-radius 8px
-    //-webkit-box-shadow: 0 4px 8px 6px rgba(7,17,27,.06);
-    //box-shadow: 0 4px 8px 6px rgba(7,17,27,.06);
-  }
-}
+
+
+// 留言板自定义样式 start
+.guestbook-main
+  position relative
+  height 200px
+  line-height 200px
+  font-size 30px
+  color #888
+  text-align center
+  user-select none
+
+  &::before
+    position absolute
+    top -20px
+    content: ' '
+    display block
+    width 100%
+    height 24px
+    opacity 0.2
+    background-repeat no-repeat
+    background-position 0 -6px
+    background-size 22px 22px
+    background-image url(../img/quote-l.svg)
+    border-top 1px solid #ccc
+
+  &::after
+    position absolute
+    bottom -20px
+    content: ' '
+    display block
+    width 100%
+    height 24px
+    opacity 0.2
+    background-image url(../img/quote-r.svg)
+    background-size 22px 22px
+    background-repeat no-repeat
+    background-position: 100% 8px;
+    border-bottom 1px solid #ccc
+// 留言板自定义样式 end
 
