--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -56,7 +56,7 @@
     width 100%
     height 100%
     background-image url(https://s3.ax1x.com/2020/11/20/DQA9iR.jpg)
-    background-image url(https://s3.ax1x.com/2020/11/20/DQAlSP.jpg)
+    background-image url(https://i.loli.net/2020/11/26/Y4CbgLAfr7D1WHO.jpg)
     background-size auto 100%
     background-position center
     opacity 0.1
