--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -62,3 +62,13 @@
     opacity 0.1
     z-index -1
 
+
+#valine-comments
+  .vpower
+    display none
+
+#veditor
+  background: url(https://cdn.jsdelivr.net/gh/XuxuGood/cdn@master/blogImages/valine/comment.webp) 100% 100% no-repeat;
+  &:focus
+    background-position-y: 400px;
+    transition: all .2s ease-in-out 0s;
