--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -74,7 +74,13 @@
     transition: all .2s ease-in-out 0s;
 
 #taboola-livere
-  display none
+  height 0
+  opacity 0
+  pointer-events none
+  overflow hidden
 
-.trc_related_container
-  display none
+.trc_related_container, .tbl-vignette
+  height 0 !important
+  opacity 0 !important
+  pointer-events none
+  overflow hidden
